css/style.css
/* ... */
  #colorlib-aside #colorlib-main-menu ul {
    text-align: right;
    margin: 0;
    padding: 0; }
    @media screen and (max-width: 768px) {
      #colorlib-aside #colorlib-main-menu ul {
        margin: 0 0 2em 0; } }
    #colorlib-aside #colorlib-main-menu ul li {
      margin: 0 0 10px 0;
      padding: 0;
      list-style: none;
      font-size: 12px;
      font-weight: 500;
      text-transform: uppercase;
      letter-spacing: 1px; }
      #colorlib-aside #colorlib-main-menu ul li a {
        color: rgba(0, 0, 0, 0.4);
        text-decoration: none;
        position: relative;
        padding: 10px 0;
        font-family: "Quicksand", Arial, sans-serif;
        -webkit-transition: 0.3s;
        -o-transition: 0.3s;
        transition: 0.3s; }
        #colorlib-aside #colorlib-main-menu ul li a:after {
          content: "";
          position: absolute;
          height: 1px;
          bottom: 7px;
          left: 0;
          right: 0;
          background-color: #000;
          visibility: hidden;
          -webkit-transform: scaleX(0);
          -moz-transform: scaleX(0);
          -ms-transform: scaleX(0);
          -o-transform: scaleX(0);
          transform: scaleX(0);
          -webkit-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
          -moz-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
          -ms-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
          -o-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
          transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
        #colorlib-aside #colorlib-main-menu ul li a:hover {
          text-decoration: none;
          color: black; }
          #colorlib-aside #colorlib-main-menu ul li a:hover:after {
            visibility: visible;
            -webkit-transform: scaleX(1);
            -moz-transform: scaleX(1);
            -ms-transform: scaleX(1);
            -o-transform: scaleX(1);
            transform: scaleX(1); }
      #colorlib-aside #colorlib-main-menu ul li.colorlib-active a {
        color: #000; }
        #colorlib-aside #colorlib-main-menu ul li.colorlib-active a:after {
          visibility: visible;
          -webkit-transform: scaleX(1);
          -moz-transform: scaleX(1);
          -ms-transform: scaleX(1);
          -o-transform: scaleX(1);
          transform: scaleX(1); }
  #colorlib-aside .colorlib-footer {
    position: absolute;
    bottom: 40px;
    right: 1.5em;
    left: 1.5em;
    font-size: 15px;
    text-align: right;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.6);
    padding: 0 20px; }
    @media screen and (max-width: 768px) {
      #colorlib-aside .colorlib-footer {
        position: relative;
        bottom: 0; } }
    #colorlib-aside .colorlib-footer span {
      display: block; }
    #colorlib-aside .colorlib-footer ul {
      padding: 0;
      margin: 0; }
      #colorlib-aside .colorlib-footer ul li {
        padding: 0;
        margin: 0;
        display: inline;
        list-style: none; }
        #colorlib-aside .colorlib-footer ul li a {
          color: rgba(0, 0, 0, 0.7);
          padding: 4px; }
          #colorlib-aside .colorlib-footer ul li a:hover, #colorlib-aside .colorlib-footer ul li a:active, #colorlib-aside .colorlib-footer ul li a:focus {
            text-decoration: none;
            outline: none;
            color: #F75940; }

#colorlib-main {
  width: 80%;
  float: right;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s; }
  @media screen and (max-width: 1200px) {
    #colorlib-main {
      width: 70%; } }
  @media screen and (max-width: 768px) {
    #colorlib-main {
      width: 100%; } }

#colorlib-hero {
  min-height: 500px;
  background: #fff url(../images/loader.gif) no-repeat center center;
  width: 100%;
  float: left;
  margin-bottom: 10em;
  clear: both; }
  #colorlib-hero .btn {
    font-size: 24px; }
    #colorlib-hero .btn.btn-primary {
      padding: 14px 30px !important; }
  #colorlib-hero .flexslider {
    border: none;
    z-index: 1;
    margin-bottom: 0; }
    #colorlib-hero .flexslider .slides {
      position: relative;
      overflow: hidden; }
      #colorlib-hero .flexslider .slides li {
        background-repeat: no-repeat;
        background-size: cover;
        background-position: bottom center;
        min-height: 400px;
        position: relative; }
    #colorlib-hero .flexslider .flex-control-nav {
      bottom: 20px;
      z-index: 1000;
      right: 20px;
      float: right;
      width: auto; }
      #colorlib-hero .flexslider .flex-control-nav li {
        display: block;
        margin-bottom: 10px; }
        #colorlib-hero .flexslider .flex-control-nav li a {
          background: rgba(255, 255, 255, 0.2);
          -webkit-box-shadow: none;
          box-shadow: none;
          width: 12px;
          height: 12px;
          cursor: pointer; }
          #colorlib-hero .flexslider .flex-control-nav li a.flex-active {
            cursor: pointer;
            background: transparent;
            border: 2px solid #F75940; }
    #colorlib-hero .flexslider .flex-direction-nav {
      display: none; }
    #colorlib-hero .flexslider .slider-text {
      display: table;
      opacity: 0;
      min-height: 500px;
      z-index: 9; }
      #colorlib-hero .flexslider .slider-text > .slider-text-inner {
        display: table-cell;
        vertical-align: middle;
        min-height: 700px;
        padding: 2em;
        position: relative; }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner .desc {
          position: absolute;
          bottom: 15px;
          left: 0px;
          padding: 30px;
          padding-right: 40px;
          background: #000;
          opacity: 0.7}
        @media screen and (max-width: 768px) {
          #colorlib-hero .flexslider .slider-text > .slider-text-inner {
            text-align: center; } }
/* ... */

